Bug 479424 - When activating "Peek at desktop" ("Show desktop"), opening a new window does not disable "Peek at desktop"
Summary: When activating "Peek at desktop" ("Show desktop"), opening a new window does...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 5.91.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-01-05 10:07 UTC by Oded Arbel
Modified: 2024-01-15 18:09 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oded Arbel 2024-01-05 10:07:58 UTC
SUMMARY
In Plasma 5, when clicking "Peek at desktop" (or triggering it with a shortcut), then using the unobstructed desktop background to launch a new application (for example, clicking an application launcher to launch an application), the "Peek at desktop" effect would be disabled automatically - returning all of your windows.

With Plasma 6 this doesn't happen - one has to manually deactivate "Peek at desktop" to get back all the windows.

STEPS TO REPRODUCE
1. Have some windows on the screen
2. Click "Peek at desktop" or click the "Show Desktop" Plasma shortcut (default to CTRL+F12)
3. Launch a new application, for example by right clicking the background and choosing "Configure desktop" from the desktop operations menu.

OBSERVED RESULT
The new application launches but it is the only window showing, all other windows remain off the screen and the "Peek at desktop" widget on the panel is still showing it is active.

EXPECTED RESULT
The "Peek at desktop" behavior should be automatically deactivated.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.91.90
KDE Frameworks Version: 5.248.0
Qt Version: 6.6.1
Kernel Version: 6.2.0-39-generic (64-bit)
Graphics Platform: offscreen
Processors: 20 × 12th Gen Intel® Core™ i7-12700H
Memory: 31.0 GiB of RAM
Graphics Processor: Mesa Intel® Graphics

ADDITIONAL INFORMATION
When manually deactivating "Peek at desktop", the new application remains the active application - which is the correct behavior.
Comment 1 Nate Graham 2024-01-11 22:12:25 UTC
I can see that's it's different in 6 vs 5, but I'm not sure which one is intended and which one is buggy! I can see pros and cons for both.

Can also reproduce when triggering the KWin effect via Meta+D, so it looks like the change came from the effect itself, rather than the applet to trigger it in Plasma.
Comment 2 Oded Arbel 2024-01-11 22:57:07 UTC
Regarding shortcuts, in the shortcuts KCM there are several different settings for this functionality:

- KWin -> Show Desktop: The default says CTRL+F12, but for me it was disabled and when I tried to enable it I got a message that it conflicts with plasmashell Show Desktop. When I tried to set it to a custom shortcut, it did not seem to work.
- KWin -> Peek at desktop: The default is Meta+D and activates the Peek at Desktop widget.
- plasmashell -> Show Desktop: The default is indeed CTRL+F12, so we have two different shortcuts with the same default. One of them should probably be removed. This seems to do the same thing as the Peek at Desktop widget - it even highlights the widget.
- plasmashell -> Activate Peek at Desktop Widget (that is the real label): No default, and when I set a custom shortcut - it does not seem to work, and it won't activate the Peek at Desktop widget.

Also, you can right click the actual Peek at Desktop widget, select "Configure..." and set a shortcut to activate the widget - this works as expected. So 5 different ways to set a keyboard shortcuts,  with 2 different default binding and some do not even work....

Regarding what behavior is buggy: the Plasma 6 behavior is definitely the buggy one - you can start several windows with Peek at Desktop active and you can see that KWin gets really confused about which window should be active when some windows are visible and other windows are not visible but not minimized...

Here's a repro:
1. Make sure you have a wallpaper background (image or slideshow or something that has an "Open wallpaper image" action in the desktop RMB menu).
2. Have some windows open.
3. activate Peek at Desktop (doesn't matter if its the widget or a shortcut)
4. Right click the desktop and choose "Open wallpaper image", which will open Gwenview and we can see it is active.
5. Click the "Edit" menu, then "Edit Tags" - the tag editor dialog pops up.
6. Click "Close" on the dialog - notice that Gwenview is no longer active, but the task manager still shows it as active.
7. Use the task manager to select another window - all the windows come up, but notice that the task manager still shows Gwenview as active, as well as the new window you selected.

All that didn't happen with the Plasma 5 behavior because as soon as you had a new window covering the desktop, all the windows were put back and you were back to standard window management.
Comment 3 Nate Graham 2024-01-12 21:55:28 UTC
Yeah, with those steps I can see that it's a bug now, thanks.
Comment 4 Bug Janitor Service 2024-01-15 10:11:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4924
Comment 5 Vlad Zahorodnii 2024-01-15 15:53:14 UTC
Git commit af39179446b0c9a969b02829e1a5816c74527233 by Vlad Zahorodnii.
Committed on 15/01/2024 at 16:41.
Pushed by vladz into branch 'master'.

Break show desktop mode if a new window is added

M  +48   -0    autotests/integration/showing_desktop_test.cpp
M  +16   -4    src/workspace.cpp
M  +2    -0    src/workspace.h

https://invent.kde.org/plasma/kwin/-/commit/af39179446b0c9a969b02829e1a5816c74527233
Comment 6 Vlad Zahorodnii 2024-01-15 18:09:14 UTC
Git commit b813b9879ad629fa7a91c445721efc30dcb31a86 by Vlad Zahorodnii.
Committed on 15/01/2024 at 18:57.
Pushed by vladz into branch 'Plasma/6.0'.

Break show desktop mode if a new window is added
(cherry picked from commit af39179446b0c9a969b02829e1a5816c74527233)

M  +48   -0    autotests/integration/showing_desktop_test.cpp
M  +16   -4    src/workspace.cpp
M  +2    -0    src/workspace.h

https://invent.kde.org/plasma/kwin/-/commit/b813b9879ad629fa7a91c445721efc30dcb31a86