Break show desktop mode if a new window is added

BUG: 479424